--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
+
+/config/credentials/development.key
+
+/config/credentials/production.key
+/node_modules/*
+ /config/credentials/*
+ /config/master.key.bak*
