--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "@material-tailwind/html": "^3.0.0-beta.7"
+    "@material-tailwind/html": "^3.0.0-beta.7",
+    "@rails/actiontext": "^8.0.200",
+    "trix": "^2.1.15"
   }
 }
